# WorkJournal

./: README.md  main.py  pyproject.toml  requirements.txt  reservation.py  ruff.toml  scheduler_backup.py  setup.py
config/: config.ini  gray.json
constants/: constants.py
domain/: models.py  validators.py
infrastructure/db/: db_base_adapter.py  exceptions.py
infrastructure/gui/: command_frame.py  communication_window.py  custom_dialog.py  data_frame.py  date_window.py  main_frame.py  main_window.py  menu_frame.py  object_window.py  tree_frame.py
interface_adapters/db_adapter/: db_adapter.py
interface_adapters/gui_adapter/: gui_adapter.py
use_cases/: record_management.py  reservation.py
