[project]
name = "workjournal"
version = "2025.08.31"
description = "Worjournal"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "asttokens==3.0.0",
    "babel==2.14.0",
    "cffi==1.16.0",
    "colorama==0.4.6",
    "cryptography==42.0.5",
    "customtkinter==5.2.2",
    "cx-freeze==6.15.15",
    "cx-logging==3.1.0",
    "darkdetect==0.8.0",
    "et-xmlfile==1.1.0",
    "executing==2.2.0",
    "icecream==2.1.4",
    "isort==5.13.2",
    "lief==0.14.0",
    "packaging==24.0",
    "pycparser==2.22",
    "pygments==2.19.1",
    "pymysql==1.1.0",
    "tkcalendar==1.6.1",
]

[dependency-groups]
dev = [
    "ruff>=0.11.2",
]
